// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when not passed all props 1`] = `
"
  <div id=\\"repoCard\\" class=\\"row align-items-center justify-content-center\\">
    <div class=\\"card col-6 text-center\\">
      <div class=\\"card-body\\">
        <div class=\\"row\\">
          <div class=\\"col-12\\">
            <h3 class=\\"mb-0 text-truncated\\">
              <a href=\\"http://github.com/test/testProj\\" target=\\"_blank\\">testProj</a>
            </h3>
            <p class=\\"lead\\">JavaScript</p>
            <p>
              
            </p>
          </div>
          <div class=\\"col-12 col-lg-4\\">
            <h3 class=\\"mb-0\\">0</h3>
            <small>Assinante(s)</small>
          </div>
          <div class=\\"col-12 col-lg-4\\">
            <h3 class=\\"mb-0\\">0</h3>
            <small>Stars</small>
          </div>
          <div class=\\"col-12 col-lg-4\\">
            <h3 class=\\"mb-0\\">0</h3>
            <small>Forks</small>
          </div>
        </div>
      </div>
    </div>
  </div>
"
`;

exports[`renders correctly when passed all props 1`] = `
"
  <div id=\\"repoCard\\" class=\\"row align-items-center justify-content-center\\">
    <div class=\\"card col-6 text-center\\">
      <div class=\\"card-body\\">
        <div class=\\"row\\">
          <div class=\\"col-12\\">
            <h3 class=\\"mb-0 text-truncated\\">
              <a href=\\"http://github.com/test/testProj\\" target=\\"_blank\\">testProj</a>
            </h3>
            <p class=\\"lead\\">JavaScript</p>
            <p>
              Some proj
            </p>
          </div>
          <div class=\\"col-12 col-lg-4\\">
            <h3 class=\\"mb-0\\">0</h3>
            <small>Assinante(s)</small>
          </div>
          <div class=\\"col-12 col-lg-4\\">
            <h3 class=\\"mb-0\\">0</h3>
            <small>Stars</small>
          </div>
          <div class=\\"col-12 col-lg-4\\">
            <h3 class=\\"mb-0\\">0</h3>
            <small>Forks</small>
          </div>
        </div>
      </div>
    </div>
  </div>
"
`;
